# quant-methods-3440

./: .black.toml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
classes/: _quarto.yml  firehose.qmd  index.qmd  index.tex  references.bib  static-communication.ipynb  static-communication.qmd  telling-stories.qmd  writing-research.qmd
classes/.quarto/_freeze/firehose/execute-results/: html.json  tex.json
classes/.quarto/_freeze/static-communication/execute-results/: html.json
classes/.quarto/_freeze/writing-research/execute-results/: html.json
classes/.quarto/cites/: index.json
classes/.quarto/idx/: firehose.qmd.json  index.qmd.json  static-communication.qmd.json  telling-stories.qmd.json  writing-research.qmd.json
classes/.quarto/xref/: 7da4ee11  INDEX  c2057d30  f52a0a7f
classes/_book/: firehose.html  index.html  references.html  search.json  static-communication.html  telling-stories.html  writing-research.html
classes/data/: toronto_shelters_clean.csv
qrm3440/: paths.py  style.py
qrm3440/data/datasaurus_dozen/: get_dino_data.sh
slides/: M01.qmd  custom.scss
