[tool.poetry]
name = "qrm3440"
packages = [{ include = "qrm3440" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyjanitor = "^0.29.0"
pyprojroot = "^0.3.0"
ipykernel = "^6.29.5"
toronto-open-data = "^0.1.3"
tabulate = "^0.9.0"
statsmodels = "^0.14.3"
geopandas = "^1.0.1"
folium = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"