[tool.poetry]
name = "qrm3440"
packages = [{ include = "qrm3440" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyjanitor = "^0.29.0"
pyprojroot = "^0.3.0"
ipykernel = "^6.29.5"
toronto-open-data = "^0.1.3"
tabulate = "^0.9.0"
statsmodels = "^0.14.3"
geopandas = "^1.0.1"
folium = "^0.17.0"
pre-commit = "^3.8.0"
pydot = "^3.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"
arviz = "^0.19.0"
pymc = "^5.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
